--- a/5.0/README
+++ b/5.0/README
@@ -5,7 +5,7 @@ A Makefile is given to compile file.
 
 Use `make` to compile and `make clean` to clean directory.
 
-You can execute program by typing : `./lookup [size] [output file]`
+You can execute the program by typing : `./lookup [size] [output file]`
 
 Note : Makefile clean the default output.txt file
 
@@ -14,21 +14,24 @@ Code explaination
 -----------------
 
 I use a structure to simplify code,
-I use always 3 matrix and the counter on all function, so it's for this.
+I always use 3 matrix and the integer which contain their size on all function where the structure is use, so it's for that.
 
 All function are norlmally explicit.
 
 Little information about my randoms function :
        - rand_sign : use for random 1 and -1
-       - rand_double : use for random double, I pick 2 random integer and divide between us and after aply rand_sign
+       - rand_double : use for random double, I pick 2 random integer and divide between them and after aply rand_sign
 
-Error :
+Error
+-----
 
-Error is hanfle by if statements whenever if necessary to assume that function is not bad uses.
-Exept compute function to don't stop process when the cpu compute the reduc/dotprod.
+Error is handle by `if` statements whenever it is necessary to assume that functions are not bad uses.
+Except compute function to don't stop process when the cpu compute the reduc/dotprod, so I use the trick that you show us, which is to call an function who compute after pointers are checks.
 
-Funtion :
-	- print a matrix in given file
+Funtions
+--------
+
+	- print a matrix in a given file
 	- init matrix with random value
 	- release memory
 	- compute function
