--- a/5.0/README
+++ b/5.0/README
@@ -22,10 +22,11 @@ Little information about my randoms function :
        - rand_sign : use for random 1 and -1
        - rand_double : use for random double, I pick 2 random integer and divide between them and after aply rand_sign
 
-Error
------
+Errors
+------
 
 Error is handle by `if` statements whenever it is necessary to assume that functions are not bad uses.
+
 Except compute function to don't stop process when the cpu compute the reduc/dotprod, so I use the trick that you show us, which is to call an function who compute after pointers are checks.
 
 Funtions
