--- a/5.0/README
+++ b/5.0/README
@@ -10,7 +10,24 @@ Use `make` to compile and `make clean` to clean directory.
 
 You can execute the program by typing : `./rdc [size] [output file]`
 
-Note : Makefile clean the default output.txt file
+Note : Makefile clean all files begining by `out`.
+
+
+Overview
+--------
+
+This code generate 3 matrix with random values and apply this algorithm :
+
+for (i < n)
+    for (j < n)
+    	for (k < n)
+	    c[i][k] += a[i][k] * b[i][k];
+
+
+n : size of all matrix (they are square matrix with the same size)
+a, b, c : matrix
+
+After the compute, store the size and content of matrix `c` into output file.
 
 
 Code explaination
@@ -52,5 +69,5 @@ Versions
 --------
 
 	- V1 : I use 3 `double **` to represent the 3 matrix, and an integer to represent their size
-	- V2 : I found that V1 was not organize and I always put all matrix on all funtion parameters. Therefore I decided to create an structure which contain all `double **` and the integer
-	- V3 : TODO
+
+	- V2 : I found that V1 was not organize and I always put all matrix on all funtion parameters. Therefore I decided to create an structure which contain all `double **` and the integer. But this version can't control if the compute function doesn't alter `a` and `b` matrix.
